# tdx-pq-attestation

./: .gitignore  .gitmodules  changes_from_start.md  for_others  for_others.md  mldsa_flow_explained.md  other  timeline  todo
docs/: acronyms.md  analysis  changes_from_start.md  experiment_definition.md  for_others.md  mappa  mldsa_key_handling.md  modified_tree_summary.md  new_machine_sgx_tdx_pccs_bringup.md  next_step_mldsa_verifier.md  project_scope_and_risks.md  rqs.md  sealed_blob_explained.md  study  todo  todo.md
tdx_tests/: README.md  local_tdx_verifier  run_tdx_tests.sh  sgx_default_qcnl_ecdsa_test.conf  sgx_default_qcnl_local_test.conf  test_quote_headers_mldsa.cpp  test_tdqe_quote_layout_mldsa.cpp  test_tdx_quote_wrapper.cpp  test_tdx_wrapper_algorithms.cpp  utils.cpp
tdx_tests/common/: utils.h
tdx_tests/direct/: run_host_tdx_guest_repo_tests.sh  run_mldsa_tdx_only_tests.sh  run_tdx_ecdsa_tests.sh  test_tdx_direct_mldsa_probe.cpp  test_tdx_quote_wrapper.cpp
tdx_tests/format/: test_quote_headers_mldsa.cpp
tdx_tests/sgxsdk/: environment  uninstall.sh
tdx_tests/tdqe/: test_randombytes_stub.c  test_tdqe_mldsa_adapter.c  test_tdqe_quote_layout_mldsa.cpp  test_tdqe_sim_loader.cpp
tdx_tests/verifier/: local_tdx_verifier.cpp  test_tdx_mldsa_quote_verify_probe.cpp
tdx_tests/wrapper/: run_mldsa_e2e.sh  test_tdx_mldsa_init_quote_probe.cpp  test_tdx_wrapper_algorithms.cpp  test_tdx_wrapper_mldsa_e2e.cpp
test/: README.md  helpers.py  run_tests.py
test/dcap/: test_dcap_tdx_flow.py
test/rust_lab/: Cargo.toml  README.md
(+79 files in other folders)
